syntax = "proto3";

option java_package = "net.ramify.model.relationship.proto";
option java_outer_classname = "RelationshipProto";

message Relationship {

    string fromId = 1;
    string toId = 2;

    Type type = 3;
    bool unknown = 4;

    enum Type {

        UNKNOWN = 0;
        SPOUSE = 1;
        SIBLING = 2;
        PARENT_CHILD = 3;
        CHILD_PARENT = 4;

        INDIRECT = 10;

        FICTIVE = 20;

    }

}

message RelationshipList {

    repeated Relationship relationship = 1;

}